# air32_cmake

./: CMakeLists.txt  README.md  air32.sct
src/bsp/: air32f10x_it.c  bsp.c  bsp.h  delay.c  delay.h  main.c  ws2812.c  ws2812.h
